tdf#158379 check if PageDesc's m_pPSName is a nullptr

Change-Id: If9f6d695d40c1d55ee2dfbdf1e3523b33343d7ce
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160504
Tested-by: Jenkins
Reviewed-by: Patrick Luby <plubius@libreoffice.org>
(cherry picked from commit 48748d5b5a89f27e1d2f610152145e3a19eda9a9)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160473
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>